############################
testrepository release notes
############################

NEXT (In development)
+++++++++++++++++++++

0.0.20
++++++

IMPROVEMENTS
------------

* Tests will be reliably tagged with worker-%d. The previous tagging logic
  had an implicit race - the tag id was looked up via a closure which gets
  the state of the pos variable at the position the overall loop has advanced
  too, not the position when the closure was created.
  (Robert Collins, #1316858)

0.0.19
++++++

CHANGES
-------

* Passing --subunit to all testr commands will now consistently output subunit
  v2. Previously it would output v1 for stored streams and v2 for live
  streams. (Robert Collins)

* ``run`` was outputting bad MIME types - test/plain, not text/plain.
  (Robert Collins)

* Test filtering was failing under python3 and would only apply the
  filters to the first test listed by discover. (Clark Boylan, #1317607)

* Tests that are enumerated but not executed will no longer reset the test
  timing data. Enumeration was incorrectly recording a 0 timestamp for
  enumerated tests. This leads to poor scheduling after an interrupted test
  run. (Robert Collins, #1322763)

* Version 0.0.18 of subunit is now a hard dependency - the v2 protocol solves
  key issues in concurrency and stream handling. Users that cannot use subunit
  v2 can run an older testrepository, or contact upstream to work through
  whatever issue is blocking them. (Robert Collins)

* When list-tests encounters an error, a much clearer response will
  now be shown. (Robert Collins, #1271133)

INTERNALS
---------

* The ``get_subunit_stream`` methods now return subunit v2 streams rather
  than v1 streams, preparing the way for storage of native v2 streams in
  the repository. (Robert Collins)

* ``UI.output_stream`` is now tested for handling of non-utf8 bytestreams.
  (Robert Collins)

0.0.18
++++++

CHANGES
-------

* ``run`` now accepts ``--isolated`` as a parameter, which will cause each